--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/plugins.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/dark.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
-    {#    <script type="text/javascript" src="{% static 'js/modernizr.custom.js' %}"></script>#}
 
 </head>
 <body>
@@ -25,7 +24,6 @@
 <div id="preloader">
     <div class="loader_line"></div>
 </div>
-
 
 <div class="tokyo_tm_all_wrap" data-magic-cursor="show" data-enter="fadeInLeft" data-exit="">
 
@@ -422,10 +420,10 @@
 
 </div>
 
-<script src="{% static '' %}js/jquery.js"></script>
-<script type="text/javascript" src="{% static '' %}js/ie8.js"></script>
-<script src="{% static '' %}js/plugins.js"></script>
-<script src="{% static '' %}js/init.js"></script>
+<script src="{% static 'js/jquery.js' %}"></script>
+{#<script type="text/javascript" src="{% static '' %}js/ie8.js"></script>#}
+<script src="{% static 'js/plugins.js' %}"></script>
+<script src="{% static 'js/init.js' %}"></script>
 
 </body>
 
