--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,41 @@
 <html lang="en">
 
 <head>
+
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({
+            'gtm.start':
+                new Date().getTime(), event: 'gtm.js'
+        });
+        var f = d.getElementsByTagName(s)[0],
+            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src =
+            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-5LPGT7T6');</script>
+    <!-- End Google Tag Manager -->
+
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="description" content="Ibragimov's blog site">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Ibragimov's Blog</title>
-
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description"
+          content="husan uz, xusan uz, husan ,xusan, husan dev, xusan dev, husandev, xusandev, ibragimovxusan, ibragimovhusan, husanibragimov, xusanibragimov, husanibragimov uz, xusanibragimov uz, husanibragimovuz, xusanibragimovuz, husan ibragimov, xusan ibragimov, ibragimov husan, ibragimov xusan, ibragimovdev, ibragimov dev, dasturchi, developer, builder, python">
+    <meta name="keywords"
+          content="husanibragimov uz, husandev uz, husan uz, xusan uz, husan ,xusan, husan dev, xusan dev, husandev, xusandev, ibragimovxusan, ibragimovhusan, husanibragimov, xusanibragimov, ibragimovxusan uz, ibragimovhusan uz, ibragimovhusan uz">
+    <meta name="robots" content="index, follow">
+    <meta name="author"
+          content="husanibragimov uz, husandev uz, husan uz, xusan uz, husan ,xusan, husan dev, xusan dev, husandev, xusandev, ibragimovxusan, ibragimovhusan, husanibragimov, xusanibragimov, ibragimovxusan uz, ibragimovhusan uz, ibragimovhusan uz">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="wFqViCET7BhASWONiLREWAr1PrstCO6PnT-NnX4sac0"/>
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
@@ -20,6 +50,13 @@
 
 </head>
 <body>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5LPGT7T6"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <div id="preloader">
     <div class="loader_line"></div>
@@ -52,7 +89,7 @@
                 {#                <li><a href="#service">Service</a></li>#}
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#news">News</a></li>
-{#                <li><a href="#contact">Contact</a></li>#}
+                {#                <li><a href="#contact">Contact</a></li>#}
             </ul>
         </div>
     </div>
@@ -72,7 +109,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#news">News</a></li>
-{#                    <li><a href="#contact">Contact</a></li>#}
+                    {#                    <li><a href="#contact">Contact</a></li>#}
                 </ul>
             </div>
             <div class="copyright">
@@ -331,7 +368,8 @@
                                         <div class="main_content">
                                             <div class="descriptions">
                                                 <p class="bigger">{{ blog.blogimages_set.first.description|safe }}</p>
-                                                <p>Yangiliklar <a href="https://t.me/husandev">@husandev</a> telegram kanalida yoritilib boriladi.</p>
+                                                <p>Yangiliklar <a href="https://t.me/husandev">@husandev</a> telegram
+                                                    kanalida yoritilib boriladi.</p>
                                             </div>
                                         </div>
 
@@ -346,70 +384,70 @@
             </div>
 
 
-{#            <div id="contact" class="tokyo_tm_section">#}
-{#                <div class="container">#}
-{#                    <div class="tokyo_tm_contact">#}
-{#                        <div class="tokyo_tm_title">#}
-{#                            <div class="title_flex">#}
-{#                                <div class="left">#}
-{#                                    <span>Contact</span>#}
-{#                                    <h3>Get in Touch</h3>#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                        <div class="map_wrap">#}
-{#                            <div class="mapouter">#}
-{#                                <div class="gmap_canvas">#}
-{#                                    <iframe width="100%" height="355" id="gmap_canvas"#}
-{#                                            src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"#}
-{#                                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>#}
-{#                                    <a href="https://fmovies-online.net/">fmovies</a><br>#}
-{#                                    <style>.mapouter {#}
-{#                                        position: relative;#}
-{#                                        text-align: right;#}
-{#                                        height: 355px;#}
-{#                                        width: 100%;#}
-{#                                    }</style>#}
-{#                                    <a href="https://www.embedgooglemap.net/">embedgooglemap.net</a>#}
-{#                                    <style>.gmap_canvas {#}
-{#                                        overflow: hidden;#}
-{#                                        background: none !important;#}
-{#                                        height: 355px;#}
-{#                                        width: 100%;#}
-{#                                    }</style>#}
-{#                                </div>#}
-{#                            </div>#}
-{##}
-{#                        </div>#}
-{#                        <div class="fields">#}
-{#                            <form action="/" method="post" class="contact_form" id="contact_form" autocomplete="off">#}
-{#                                <div class="returnmessage"#}
-{#                                     data-success="Your message has been received, We will contact you soon."></div>#}
-{#                                <div class="empty_notice"><span>Please Fill Required Fields</span></div>#}
-{#                                <div class="first">#}
-{#                                    <ul>#}
-{#                                        <li>#}
-{#                                            <input id="name" type="text" placeholder="Name">#}
-{#                                        </li>#}
-{#                                        <li>#}
-{#                                            <input id="email" type="text" placeholder="Email">#}
-{#                                        </li>#}
-{#                                    </ul>#}
-{#                                </div>#}
-{#                                <div class="last">#}
-{#                                    <textarea id="message" placeholder="Message"></textarea>#}
-{#                                </div>#}
-{#                                <div class="tokyo_tm_button" data-position="left">#}
-{#                                    <a id="send_message" href="/">#}
-{#                                        <span>Send Message</span>#}
-{#                                    </a>#}
-{#                                </div>#}
-{##}
-{#                            </form>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
+            {#            <div id="contact" class="tokyo_tm_section">#}
+            {#                <div class="container">#}
+            {#                    <div class="tokyo_tm_contact">#}
+            {#                        <div class="tokyo_tm_title">#}
+            {#                            <div class="title_flex">#}
+            {#                                <div class="left">#}
+            {#                                    <span>Contact</span>#}
+            {#                                    <h3>Get in Touch</h3>#}
+            {#                                </div>#}
+            {#                            </div>#}
+            {#                        </div>#}
+            {#                        <div class="map_wrap">#}
+            {#                            <div class="mapouter">#}
+            {#                                <div class="gmap_canvas">#}
+            {#                                    <iframe width="100%" height="355" id="gmap_canvas"#}
+            {#                                            src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed"#}
+            {#                                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>#}
+            {#                                    <a href="https://fmovies-online.net/">fmovies</a><br>#}
+            {#                                    <style>.mapouter {#}
+            {#                                        position: relative;#}
+            {#                                        text-align: right;#}
+            {#                                        height: 355px;#}
+            {#                                        width: 100%;#}
+            {#                                    }</style>#}
+            {#                                    <a href="https://www.embedgooglemap.net/">embedgooglemap.net</a>#}
+            {#                                    <style>.gmap_canvas {#}
+            {#                                        overflow: hidden;#}
+            {#                                        background: none !important;#}
+            {#                                        height: 355px;#}
+            {#                                        width: 100%;#}
+            {#                                    }</style>#}
+            {#                                </div>#}
+            {#                            </div>#}
+            {##}
+            {#                        </div>#}
+            {#                        <div class="fields">#}
+            {#                            <form action="/" method="post" class="contact_form" id="contact_form" autocomplete="off">#}
+            {#                                <div class="returnmessage"#}
+            {#                                     data-success="Your message has been received, We will contact you soon."></div>#}
+            {#                                <div class="empty_notice"><span>Please Fill Required Fields</span></div>#}
+            {#                                <div class="first">#}
+            {#                                    <ul>#}
+            {#                                        <li>#}
+            {#                                            <input id="name" type="text" placeholder="Name">#}
+            {#                                        </li>#}
+            {#                                        <li>#}
+            {#                                            <input id="email" type="text" placeholder="Email">#}
+            {#                                        </li>#}
+            {#                                    </ul>#}
+            {#                                </div>#}
+            {#                                <div class="last">#}
+            {#                                    <textarea id="message" placeholder="Message"></textarea>#}
+            {#                                </div>#}
+            {#                                <div class="tokyo_tm_button" data-position="left">#}
+            {#                                    <a id="send_message" href="/">#}
+            {#                                        <span>Send Message</span>#}
+            {#                                    </a>#}
+            {#                                </div>#}
+            {##}
+            {#                            </form>#}
+            {#                        </div>#}
+            {#                    </div>#}
+            {#                </div>#}
+            {#            </div>#}
 
         </div>
     </div>
@@ -424,6 +462,18 @@
 {#<script type="text/javascript" src="{% static '' %}js/ie8.js"></script>#}
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/init.js' %}"></script>
+
+<!-- Google Analytics -->
+<script>
+    window.ga = window.ga || function () {
+        (ga.q = ga.q || []).push(arguments)
+    };
+    ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto');
+    ga('send', 'pageview');
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
+<!-- End Google Analytics -->
 
 </body>
 
