--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
                                 <p class="job">Get big solutions to big problems.</p>
                                 <div class="social">
                                     <ul>
-                                        <li><a href="https://www.facebook.com/iibragimovxusan/"><i
+                                        <li><a href="https://www.facebook.com/husanibragimov.uz"><i
                                             style="font-size: 23px;" class="icon-facebook-squared"></i></a></li>
                                         <li><a href="https://twitter.com/ibragimovxusan_"><i
                                             style="font-size: 23px;" class="icon-twitter-squared"></i></a></li>
@@ -229,7 +229,7 @@
                                                     </div>
                                                     <div class="place">
                                                         <h3>{{ education.education }}</h3>
-                                                        <span>Master Degree</span>
+                                                        <span>{{ education.degree }}</span>
                                                     </div>
                                                 </div>
                                             </li>
@@ -312,7 +312,7 @@
                                             <div class="entry tokyo_tm_portfolio_animation_wrap"
                                                  data-title="{{ portfolio.name }}"
                                                  data-category="{{ portfolio.category.name }}">
-                                                <a class="popup-vimeo" href="{{ portfolio.link }}">
+                                                <a href="{{ portfolio.link }}">
                                                     <img src="{{ portfolio.image.url }}" alt=""/>
                                                     <div class="abs_image"
                                                          data-img-url="{{ portfolio.image.url }}"></div>
