--- a/templates/index.html
+++ b/templates/index.html
@@ -66,10 +66,10 @@
 
     <div class="tokyo_tm_topbar">
         <div class="topbar_inner">
-            <div class="logo" data-type="image">
+            <div class="logo" data-type="">
                 <a href="#">
-                    <img src="{% static 'img/logo/Frame.png' %}" alt=""/>
-                    <h3>Ibragimov's Blog</h3>
+{#                    <img src="{% static 'img/logo/Frame.png' %}" alt=""/>#}
+                    <h3 style="font-size: 15px">IBRAGIMOV'S BLOG</h3>
                 </a>
             </div>
             <div class="trigger">
@@ -128,7 +128,7 @@
                     <div class="tokyo_tm_home">
                         <div class="home_content">
                             <div class="avatar" data-type="wave">
-                                <div class="image" data-img-url="{% static 'img/slider/1.jpg' %}"></div>
+                                <div class="image" data-img-url="{{ main_image.image.url }}"></div>
                             </div>
                             <div class="details">
                                 <h3 class="name">HUSAN <span>IBRAGIMOV</span></h3>
