--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
 
 </head>
-<body>
+<body class="">
 
 <!-- Google Tag Manager (noscript) -->
 <noscript>
@@ -168,7 +168,7 @@
                         </div>
                         {% for about_img in about_imgs %}
                             <div class="top_author_image">
-                                <img src="{{ about_img.image.url }}" alt=""/>
+                                <img src="{{ about_img.image.url }}" alt="husanibragimov uz" height="900" width="400"/>
                             </div>
 
                             <div class="about_text">
