--- a/templates/index.html
+++ b/templates/index.html
@@ -138,11 +138,11 @@
                                     <ul>
                                         <li><a href="https://www.facebook.com/husanibragimov.uz"><i
                                             style="font-size: 24px;" class="icon-facebook-squared"></i></a></li>
-                                        <li><a href="https://twitter.com/ibragimovxusan_"><i
+                                        <li><a href="https://twitter.com/husanibragimov_"><i
                                             style="font-size: 24px;" class="icon-twitter-squared"></i></a></li>
                                         <li><a href="https://github.com/husanIbragimov"><i
                                             style="font-size: 24px;" class="icon-github-squared"></i></a></li>
-                                        <li><a href="https://www.linkedin.com/in/ibragimovxusan/"><i
+                                        <li><a href="https://www.linkedin.com/in/husanibragimov/"><i
                                             style="font-size: 24px;" class="icon-linkedin-squared"></i></a></li>
                                         <li><a href="https://t.me/husandev/"><i
                                                 class="icon-telegram"></i></a></li>
