--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -13,8 +13,7 @@
                         <div class="intro-wrap flex">
                             <div class="intro-inner">
                                 <h1>Hello, I am Husan</h1>
-                                <p>A backend engineer from Uzbekistan, focusing on user experience, visual and
-                                    interaction design. This is my personal blog.</p>
+                                <p>A backend programmer from Uzbekistan who wants to change himself and never stops striving. This is my personal blog.</p>
                             </div>
                         </div>
                     </div>
