--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -126,7 +126,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="post prev-post">
-                                <a href="{{ object.get_previous_blog_url }}"
+                                <a href="#"
                                    class="flex">
                                     <div class="featured-image">
                                         <img class="lazy"
@@ -143,7 +143,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="post next-post">
-                                <a href="{{ object.get_next_blog_url }}"
+                                <a href="#"
                                    class="flex">
                                     <div class="featured-image">
                                         <img class="lazy"
