--- a/templates/blog/about.html
+++ b/templates/blog/about.html
@@ -11,28 +11,14 @@
                 <div class="row">
                     <div class="col">
                         <div class="post-inner-wrap">
-                            <h1 class="post-title">About this site</h1>
+                            <h1 class="post-title">About me</h1>
                             <div class="post-content">
-                                <p>Saima is an independent publication launched in December 2023 by Biswajit Saha.
-                                    If you subscribe today, you'll get full access to the website as well as email
-                                    newsletters about new content when it's available. Your subscription makes this
-                                    site possible, and allows Saima to continue to exist. Thank you!</p>
-                                <h3 id="access-all-areas">Access all areas</h3>
-                                <p>By signing up, you'll get access to the full archive of everything that's been
-                                    published before and everything that's still to come. Your very own private
-                                    library.</p>
-                                <h3 id="fresh-content-delivered">Fresh content, delivered</h3>
-                                <p>Stay up to date with new content sent straight to your inbox! No more worrying
-                                    about whether you missed something because of a pesky algorithm or news feed.
-                                </p>
-                                <h3 id="meet-people-like-you">Meet people like you</h3>
-                                <p>Join a community of other subscribers who share the same interests.</p>
+                                <p>Hi there! I am Husan Ibragimov, a 21 years old. I am Backend Engineer from Uzbekistan, currently living in here. I am studying 3 course of TSTU as Economy, focus on programming and data structures.</p>
+                                <p>I share my programming and lifestyle on this blog and also write about my achievements and experiences. </p>
+                                <p>My goal is to share my knowledge and experience with you. I hope you will find something useful here.</p>
                                 <hr>
-                                <h3 id="start-your-own-thing">Start your own thing</h3>
-                                <p>Enjoying the experience? Get started for free and set up your very own
-                                    subscription business using <a
-                                            href="https://ghost.org/?ref=saima.gbjsolution.com">Ghost</a>, the same
-                                    platform that powers this website.</p>
+                                <h3 id="meet-people-like-you">Other blogs</h3>
+                                <p>You may also join other my channels. I am also active in <a href="https://t.me/husandev/">Telegram</a>.</p>
                             </div>
                         </div>
                     </div>
